--- a/app/design/frontend/pc/default/layout/catalogsearch.xml
+++ b/app/design/frontend/pc/default/layout/catalogsearch.xml
@@ -58,7 +58,7 @@
             <block type="catalogsearch/result" name="search.result" template="catalogsearch/result.phtml">
                 <block type="catalog/product_list" name="search_result_list" template="catalog/product/list.phtml">
                     <block type="catalog/product_list_toolbar" name="product_list_toolbar" template="catalog/product/list/toolbar.phtml">
-                        <block type="page/html_pager" name="product_list_toolbar_pager"/>
+                        <block type="page/html_pager" name="product_list_toolbar_pager" template="catalog/product/list/pager.phtml" />
                     </block>
                     <action method="addColumnCountLayoutDepend"><layout>empty</layout><count>6</count></action>
                     <action method="addColumnCountLayoutDepend"><layout>one_column</layout><count>5</count></action>
