--- a/app/design/frontend/pc/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/list/toolbar.phtml
@@ -27,7 +27,26 @@
     if(strpos($preurl,'?')!==false){
         $temparr = explode('?',$preurl);
         $preurl = $temparr[0];
-        $exturl = '?'.$temparr[1];
+        $temp_arr_all = convertUrlQuery($temparr[1]);
+        if(isset($temp_arr_all['order'])){
+            unset($temp_arr_all['order']);
+        }
+        if(isset($temp_arr_all['dir'])){
+            unset($temp_arr_all['dir']);
+        }
+        if(isset($temp_arr_all['p'])){
+            unset($temp_arr_all['p']);
+        }
+        if($temp_arr_all){
+            foreach($temp_arr_all as $_key=>$_value){
+                if($_value){
+                    $exturl .= $_key.'='.$_value."&";
+                }
+            }
+            if($exturl){
+                $exturl = '?'.trim($exturl,"&");
+            }
+        }
         $request_uri = $preurl;
     }
     $temparr = explode('/',$request_uri);
@@ -52,17 +71,24 @@
         }
 
         foreach ($matches[1] as $k => $v) {
-            if ($matches[2][$k] == 1) continue;
-            if($matches[2][$k] == '...'){
-                if($k == 1){
-                    $tempurl = $preurl . '/' . ($matches[2][$k+1]-1) . '.html';
+
+            if ($matches[2][$k] == 1){
+                if($this->getRequest()->getModuleName() == 'catalogsearch'){
+                    $tempurl = $preurl . '/'.$exturl;
                 }else{
-                    $tempurl = $preurl . '/' . ($matches[2][$k-1]+1) . '.html';
+                    continue;
                 }
             }else{
-                $tempurl = $preurl . '/' . $matches[2][$k] . '.html';
+                if($matches[2][$k] == '...'){
+                    if($k == 1){
+                        $tempurl = $preurl . '/' . ($matches[2][$k+1]-1) . '.html'.$exturl;
+                    }else{
+                        $tempurl = $preurl . '/' . ($matches[2][$k-1]+1) . '.html'.$exturl;
+                    }
+                }else{
+                    $tempurl = $preurl . '/' . $matches[2][$k] . '.html'.$exturl;
+                }
             }
-
             $pagehtml = str_replace($v,$tempurl , $pagehtml);
         }
         echo $pagehtml;
