--- a/skin/frontend/pc/default/scss/_category.scss
+++ b/skin/frontend/pc/default/scss/_category.scss
@@ -64,6 +64,7 @@
             }
 
             .addthis_sharing_toolbox{
+                clear:none !important;
                 float: right;
                 height: 30px;
                 overflow: hidden;
